FS-fixed-minimize-menu-being-pushed-off-the-screen-by-page-overflow

--- a/src/components/MainMenu/MainMenu.scss
+++ b/src/components/MainMenu/MainMenu.scss
@@ -3,6 +3,7 @@
 .main-container-menu {
     width: 75%;
     height: 100%;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     color: $White;
