--- a/src/pages/overview/components/Categories/Categories.scss
+++ b/src/pages/overview/components/Categories/Categories.scss
@@ -8,6 +8,7 @@
     align-items: center;
     grid-template-rows: auto auto;
     row-gap: 1rem;
+    margin-left: 1rem;
   
     .container-category {
         width: 100%;
